[tool.poetry]
name = "pump-fun-py"
version = "0.1.0"
description = ""
authors = ["yqq <youngqqcn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
solana = "^0.34.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
